--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <li>Navegue por todos nossos cursos disponíveis.</li>
 <li>Aprenda sem sair de casa.</li>
         </ul>
+        <a href="sobre.html"> Link para a página sobre </a>
     </body>
 </html>
