--- a/sobre.html
+++ b/sobre.html
@@ -43,6 +43,7 @@
     <p>Dada a importância econômica da empresa para o Brasil, a família Tüpfeln já recebeu diversos prêmios, homenagens
         e condecorações. Todos os presidentes do Brasil já visitaram as instalações da MusicDot, além de presidentes da
         União Européia, Ásia e o secretário-geral da ONU.</p>
+        <a href="index.html"> Voltar para a página principal </a>
 
 </body>
 
