Alterações em index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pt-BR">
     <head>
         <title> MusicDot</title>
-        <meta charset="utf-8"
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>MusicDot</h1>
+        Alterei
         <h2>Bem-vindo à MusicDot, seu portal de cursos de música online.</h2>
         <ul> 
 <li> Confira nossas promoções.</li>
