correção de erros no estilo.css da atividade 01

--- a/sobre.html
+++ b/sobre.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-    <title> MusicDot | Sobre a empresa </title>
+<head> 
     <meta charset="utf-8">
+    <title> MusicDot | Sobre a empresa </title>
     <link rel="icon" href="img/favicon.ico">
+    <!-- Inclusão do arquivo CSS-->
+    <link rel="stylesheet" href="estilos.css">  
+
 </head>
 
 <body>
