--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <li>Navegue por todos nossos cursos disponíveis.</li>
 <li>Aprenda sem sair de casa.</li>
         </ul>
-        <a href="sobre.html"> Link para a página sobre </a>
+        <a href="sobre.html"> Nossa História  </a>
     </body>
 </html>
