Atividade 4, alterações, correções

--- a/sobre.html
+++ b/sobre.html
@@ -21,13 +21,15 @@
         sendo líder de mercado com mais de 90% de participação em 118 deles.
     </p>
     
-    <p>Nossa matriz fica em Mafra em <a href="https://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC">, Santa Catarina </a>. De lá, saem grande parte das gravações de nossos cursos. Nossa
+    <p>Nossa matriz fica em <a href="https://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC">Mafra, em Santa Catarina </a>. De lá, saem grande parte das gravações de nossos cursos. Nossa
         matriz:
     </p>
 
-    <figure>
+    <figure class="matriz-musicdot">
         <img src="img/matriz-musicdot.png" alt="">
-        <figcaption>Matriz MusicDot</figcaption>
+        <figcaption>
+            Matriz MusicDot
+        </figcaption>
     </figure>
 
     <p>
@@ -38,7 +40,8 @@
     </p>
 
    <h2 id="historia"> História </h2>
-   <figure>
+
+   <figure class="familia-tupfeln">
         <img src="img/familia-tupfeln.jpg" alt="">
         <figcaption>Família Tüpfeln</figcaption>
     </figure>
