--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
 <body>
     <img src="img/logo.svg" alt="Logo MusicDot">
 
-    <h1>Sobre a empresa</h1>
+    <h1 class="titulo"> Sobre a empresa</h1>
 
     <p>
         A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países,
@@ -39,7 +39,7 @@
         <a href="#diferenciais"> nossos diferenciais </a>.
     </p>
 
-   <h2 id="historia"> História </h2>
+   <h2 id="historia" class="subtitulo"> História </h2>
 
    <figure class="familia-tupfeln">
         <img src="img/familia-tupfeln.jpg" alt="">
@@ -61,7 +61,7 @@
         e condecorações. Todos os presidentes do Brasil já visitaram as instalações da MusicDot, além de presidentes da
         União Européia, Ásia e o secretário-geral da ONU.</p>
 
-    <h2 id="diferenciais"> Diferenciais </h2>
+    <h2 id="diferenciais" class="subtitulo"> Diferenciais </h2>
     <ul>
       <li> Menor preço do mercado, garantido </li>
       <li> Se você achar um serviço mais barato, leva 1 mês de graça </li>
@@ -72,6 +72,8 @@
       <li> Presente em 124 países </li>
       <li> Mais de um milhão de funcionários em todo o mundo </li>
     </ul>
+    
+    <h2 class="titulo"> Contato</h2>
         
         <a href="index.html"> Nosso Site </a>
 
