Resolução do Trabalho 1 CSS, data 03.05.2023

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title> MusicDot</title>
     </head>
     <body>
+        <img src="img/logo.svg" alt="Logo MusicDot">
         <h1>MusicDot</h1>
         
         <h2>Bem-vindo à MusicDot, seu portal de cursos de música online.</h2>
@@ -14,6 +15,9 @@
 <li>Navegue por todos nossos cursos disponíveis.</li>
 <li>Aprenda sem sair de casa.</li>
         </ul>
+        <a href="contato.html"> Fale Conosco</a><br><br>
+
         <a href="sobre.html"> Nossa História  </a>
     </body>
 </html>
+ 
