--- a/sobre.html
+++ b/sobre.html
@@ -99,6 +99,7 @@
       <dd> <a href="tel://114118-2172"> (11) 4118-2172 </a> </dd>
     </dl>  
         
+    <a href="contato.html"> Fale Conosco</a><br><br>
         <a href="index.html"> Nosso Site </a>
 
 </body>
