Campo e-mail alterado

--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
   <input type="tel" id="foneid" placeholder="(xx)9xxxx-xxxx" name="fone" />
   <label for="fone">Fone</label><br><br>
 
-  <input type="email" id="emailid" placeholder="exemplo@mail.com" name="email" />
+  <input type="email" id="emailid" placeholder="exemplo@mail.com" name="email" required/>
   <label for="email">Email</label><br><br>
 
   <textarea placeholder="Deixe sua opnião"></textarea><br><br>
