--- a/contato.html
+++ b/contato.html
@@ -25,6 +25,4 @@
 
   <input type="submit" class="enviar" onclick="Enviar();" value="Enviar" />
 </form>
-<a href="index.html"> Voltar à página
-
-  novo oi
+<a href="index.html"> Voltar à página</a>
