alteração do estilo do contato

--- a/contato.html
+++ b/contato.html
@@ -4,10 +4,13 @@
 <head>
 <title>--Formulário Contato--</title>
 <meta charset="utf-8" />
+ <!-- Inclusão do arquivo CSS-->
+ <link rel="stylesheet" href="estiloscontato.css">  
 
 </head>
 
 <body>
+  <img src="img/logo.svg" alt="Logo MusicDot">
 <form name="meu_form">
 
   <h1>Entre em contato</h1>
