Resolução da Atividade 7

--- a/contato.html
+++ b/contato.html
@@ -2,11 +2,12 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.ico" />
-    <link rel="stylesheet" href="estiloscontato.css">
-   </head>
- 
- <title>--Formulário Contato--</title>
+    <link rel="stylesheet" href="css/ContatoEstilo.css">
+    <title>--Formulário Contato--</title>
+</head>
 <body>
     <img src="img/logo.svg" alt="logo musicdot">
     <h1 class="titulo"> Entre em contato</h1>
@@ -35,4 +36,4 @@
     </form>
 </body>
 </html>
-<a href="sobre.html"> Voltar à página </a>
+<a href="sobre.html"> Voltar à página
