--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-        <meta charset="utf-8">
-        <title> MusicDot</title>
-    </head>
-    <body>
-        <img src="img/logo.svg" alt="Logo MusicDot">
-        <h1>MusicDot</h1>
-        
-        <h2>Bem-vindo à MusicDot, seu portal de cursos de música online.</h2>
-        <ul> 
-<li> Confira nossas promoções.</li>
-<li> Receba informações sobre nossos lançamentos por email.</li>
-<li>Navegue por todos nossos cursos disponíveis.</li>
-<li>Aprenda sem sair de casa.</li>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Musicdot</title>
+    <link rel="icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,&display=block">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+  </head>
+  
+  <body>
+  <header class="cabecalho">
+      <a href="index.html">
+        <img src="img/musicdot-logo-light.svg" title="Ir para a página inicial da Musicdot" alt="Musicdot">
+      </a>
+      
+      <nav>
+        <ul>
+          <li> <a href="sobre.html#contato"> Contato </a> </li>
+          <li> <a href="#"> Entrar </a> </li>
+          <li> <a href="#"> Matricule-se </a> </li>
         </ul>
-        <a href="contato.html"> Fale Conosco</a><br><br>
+      </nav>
+    </header>
 
-        <a href="sobre.html"> Nossa História  </a>
-    </body>
+    <main>
+      Conteúdo principal
+    </main>
+
+    <footer>
+      Rodapé
+    </footer>
+  </body>
+
 </html>
- 
+    <a href="sobre.html"> Pagina sobre</a>
