--- a/sobre.html
+++ b/sobre.html
@@ -73,7 +73,7 @@
 	e condecorações. Todos os presidentes do Brasil já visitaram as instalações da MusicDot, além de presidentes da
 	União Européia, Ásia e o secretário-geral da ONU.</p>
 
-	<h2 id="diferenciais" class="subtitulo"> Difirenciais</h2>
+	<h2 id="diferenciais" class="subtitulo"> Diferenciais</h2>
 	<ul>
 		<li>Menor preço do mercado, garantido.</li>
 		<li>Se você achar um serviço mais barato, leva um mês de graça.</li>
